# macompta

./: LICENSE  Makefile  README.md  pyproject.toml
macompta/: __init__.py  twr.py  utils.py
scripts/: amortissements.py  balance-comptes.py  balance-comptes2.py  bilan.py  check-operations.py  compte-resultats.py  compute-twr.py  grand-livre.py  grand-livre2.py  immobilisations.py  livre-journal.py  subventions.py
