[tool.poetry]
name = "macompta"
version = "0.1.0"
description = "Logiciel de compta en Python"
authors = ["Pierre-Louis Guhur <pierrelouisguhur@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typed-argument-parser = "^1.8.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"
ruff = "^0.0.272"
precommit-hook = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
