[tool.poetry]
name = "macompta"
version = "0.1.0"
description = "Logiciel de compta en Python"
authors = ["Pierre-Louis Guhur <pierrelouisguhur@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typed-argument-parser = "^1.8.0"
pre-commit = "^3.3.3"
flake8 = "^6.0.0"
openpyxl = "^3.1.2"
pandas = "^2.0.3"
tabulate = "^0.9.0"
pylatex = "^1.4.1"
pydantic = "^2.0.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"
ruff = "^0.0.272"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Add line limit of 89 for black and flake8
[tool.black]
line-length = 79

[flake8]
max-line-length = 79


